--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ header {
     white-space: nowrap;
     margin-top: 25px;
     gap: 30px;
-    margin-right: 8%;
+    margin-right: 10px;
 }
 .banner{
     width: 100%;
@@ -35,6 +35,7 @@ main h1 {
     margin-left: 4.5%;
     margin-right: 4.5%;
     margin-top: 4%;
+    width: 80%;
     
 }
 .sapato{
@@ -94,4 +95,5 @@ main h1 {
 .corpo2 img {
     margin-left: 4.5% ;
     margin-right:¨4.5% ;
+    width: 80%;
 }
