--- a/index.css
+++ b/index.css
@@ -125,19 +125,16 @@ main h1 {
     margin-bottom: 20px;
 }
 
-.corpo2img1{
-    margin-top: 10%;
-    position: relative;
-}
-
 .titulo2{
     margin-top: 10%;
     text-align: center;
 }
 
 .corpo2 img {
-    margin-left: 4.5% ;
-    margin-right:¨4.5% ;
+    margin:4%;
+    margin-left: 4.5%;
+    margin-right: 4.5%;
+    margin-top: 4%;
     width: 80%;
 }
 
@@ -167,7 +164,8 @@ footer h3 {
 }
 
 footer img {
-    width: 100%
+    width: 140px;
+    margin-top: -6%;
 }
 
 footer nav {
