--- a/index.css
+++ b/index.css
@@ -39,12 +39,14 @@ header{
   .topnav a:hover {
     background-color: #ddd;
     color: black;
+   
   }
   
   /* Style the active link (or home/logo) */
   .active {
     background-color: white;
     color: white;
+    
   }
 .menu{
 
@@ -103,7 +105,10 @@ main h1 {
 
 .sapato p {
     background-color: white;
-    width: 267px;
+    margin-top: -1%;
+    margin-left: 10%;
+    text-align: center;
+    width: 80%;
     
 }
 .sapato a{
@@ -164,7 +169,7 @@ footer h3 {
 }
 
 footer img {
-    width: 140px;
+    width: 100px;
     margin-top: -6%;
 }
 
