texto para preto

--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ main h1 {
 }
 .sapato a{
     background-color: aliceblue;
-    width: 267px;
+    color: black;
 }
 .sapato h4{
     background-color: white;
