--- a/index.css
+++ b/index.css
@@ -147,6 +147,7 @@ footer {
     padding-right:  10%;;
     padding-left: 10%;
     padding-top: 5%;
+    padding-bottom: 2%;
     background-color: #C2185B;
     text-align: start;
     color: white;
@@ -174,10 +175,11 @@ footer img {
 }
 
 footer nav {
-    
+    margin-left: -20px;
     white-space: nowrap;
     display: flex;
     font-size: xx-small;
+    
 }
 footer nav strong{
     font-size: small;
