--- a/index.css
+++ b/index.css
@@ -154,7 +154,7 @@ footer {
     color: white;
     display: flex;
     max-width: 100%;
-    justify-content: space-aroundg;
+    justify-content: space-around;
     
 }
 
