melhorando o posicionamento do botão

--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ header{
     background: black;
     display: block;
     position: absolute;
-    right: 5px;
-    top: 30%;
+    right: 20px;
+    top: 45px;
   }
   
   /* Add a grey background color on mouse-over */
